--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3721/3721726.png" />
-    <title>React Portfolio Website</title>
+    <title>Belén Jaraba</title>
 </head>
 <body>
     <div id="root"></div>
